--- a/StorageAndTrade/packages.config
+++ b/StorageAndTrade/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Baseclass.Contrib.Nuget.Output" version="2.4.3" targetFramework="net472" />
-  <package id="GeckoFX" version="1.0.5" targetFramework="net472" />
+  <package id="Geckofx45" version="45.0.34" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
