--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -381,6 +381,12 @@
     <Compile Include="Звіти\ТовариНаСкладах\Form_ТовариНаСкладахПоНоменклатурі.Designer.cs">
       <DependentUpon>Form_ТовариНаСкладахПоНоменклатурі.cs</DependentUpon>
     </Compile>
+    <Compile Include="РегістриІнформації\Штрихкоди\Form_ШтрихкодиНоменклатуриЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="РегістриІнформації\Штрихкоди\Form_ШтрихкодиНоменклатуриЕлемент.designer.cs">
+      <DependentUpon>Form_ШтрихкодиНоменклатуриЕлемент.cs</DependentUpon>
+    </Compile>
     <Compile Include="РегістриІнформації\Штрихкоди\Form_ШтрихкодиНоменклатури.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1054,6 +1060,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Звіти\ТовариНаСкладах\Form_ТовариНаСкладахПоНоменклатурі.resx">
       <DependentUpon>Form_ТовариНаСкладахПоНоменклатурі.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="РегістриІнформації\Штрихкоди\Form_ШтрихкодиНоменклатуриЕлемент.resx">
+      <DependentUpon>Form_ШтрихкодиНоменклатуриЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="РегістриІнформації\Штрихкоди\Form_ШтрихкодиНоменклатури.resx">
       <DependentUpon>Form_ШтрихкодиНоменклатури.cs</DependentUpon>
