--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -1508,7 +1508,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
-set conf_folder_code=E:\Project\AccountingSoftware\Configurator
+set conf_folder_code=E:\VS\AccountingSoftware\Configurator
 set conf_folder=%25conf_folder_code%25\bin\Release
 
 set st_folder=$(TargetDir)
